[package]
name = "async-mpd"
edition = "2018"
version = "0.3.0"
authors = ["Johan Kristell <johan@jott.se>"]
keywords = ["mpd"]
license = "MIT OR Apache-2.0"
description = "Async Mpd client library"
categories = ["network-programming"]
repository = "https://github.com/jkristell/async-mpd"
readme = "README.md"

[features]
default = ["client"]
client = ["futures", "async-net"]

[dependencies]
futures = { version = "0.3.5", optional = true }
async-net = { version = "0.1.2", optional = true }
itertools = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
# The MPD responses are (almost) a tiny subset of yaml.
# It might make sense to write a custom parser at some point instead.
serde_yaml = "0.8"
serde_with = "1.4.0"
log = "0.4.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0.20"

[dev-dependencies]
structopt = "0.3"
femme = "2.1.0"

