[package]
name = "async-mpd"
edition = "2018"
version = "0.4.0"
authors = ["Johan Kristell <johan@jott.se>"]
keywords = ["mpd"]
license = "MIT OR Apache-2.0"
description = "Async Mpd client library"
categories = ["network-programming"]
repository = "https://github.com/jkristell/async-mpd"
readme = "README.md"

[features]
default = ["client"]
client = ["futures-lite", "async-net"]

[dependencies]
async-net = { version = "1.5", optional = true }
itertools = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
futures-lite = { version = "1.11", optional = true }
multimap = "0.8"
smart-default = "0.6"

[dev-dependencies]
structopt = "0.3"
femme = "2.1"
async-std = { version = "1.7", features = ["attributes"] }
tokio = { version = "1.0", features = ["full"] }
